--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 }
                 if (relSec > 0 && relSec < 2) {
                     containerEl.style.animation = null
-                    containerEl.style.background = '#ffea00'
+                    containerEl.style.background = '#ff9100'
                 }
             }, 100)
         };
@@ -70,10 +70,11 @@
         </div>
         <ul class='nistext'>
             <li>Flashing red means click book.</li>
-            <li>Yellow means turn off book after XP drop.</li>
+            <li>Orange means turn off book after XP drop.</li>
             <li>Press the + or - buttons to sync the seconds with the game.</li>
             <li>Enable timestamps in your chat so it's easier for you to sync it.</li>
             <li>Shrink this window after reading the text!</li>
+            <li>Coming soon: sounds and options.</li>
         </ul>
     </div>
 </body>
