--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         }
     </style>
     <script>
-        let startTime = Date.now() - 5000
+        let startTime = Date.now() - (new Date().getSeconds() * 1000)
+        console.log(startTime)
         window.onload = (event) => {
             console.log('page is fully loaded');
             const timerEl = document.getElementById('timer')
@@ -71,8 +72,7 @@
         <ul class='nistext'>
             <li>Flashing red means click book.</li>
             <li>Orange means turn off book after XP drop.</li>
-            <li>Press the + or - buttons to sync the seconds with the game.</li>
-            <li>Enable timestamps in your chat so it's easier for you to sync it.</li>
+            <li>Press the + or - buttons to sync the seconds with the game if necessary.</li>
             <li>Shrink this window after reading the text!</li>
             <li>Coming soon: sounds and options.</li>
         </ul>
