--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
             startTime += 1000
         }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MHLCVJJD5S"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-MHLCVJJD5S');
+    </script>
 </head>
 <body class="nis body" id='body'>
     <div id='container' class='stack' style='flex-direction: column; align-items: center;'>
