--- a/index.html
+++ b/index.html
@@ -38,108 +38,6 @@
             margin: 0;
         }
     </style>
-    <script>
-        const loadConfig = () => {
-            const initialValue = {
-                version: 1,
-                alertStartTime: 56,
-                alertEndTime: 2,
-                playSounds: false
-            }
-            try {
-                const savedConfig = JSON.parse(localStorage.getItem('config'))
-                return savedConfig || initialValue
-            } catch (e) {
-                return initialValue
-            }
-        }
-
-        const config = loadConfig()
-
-        let startTime = Date.now() - (new Date().getSeconds() * 1000)
-        window.onload = (event) => {
-            const renderConfig = () => {
-                document.getElementById('alert-start').value = config.alertStartTime
-                document.getElementById('alert-end').value = config.alertEndTime
-                document.getElementById('sound-on').style.display = config.playSounds ? 'unset' : 'none'
-                document.getElementById('sound-off').style.display = !config.playSounds ? 'unset' : 'none'
-            }
-            const save = () => {
-                localStorage.setItem('config', JSON.stringify(config))
-            }
-
-            renderConfig()
-
-            const incrementConfig = (configName, value) => {
-                config[configName] += value
-                if (config[configName] > 59) {
-                    config[configName] = 59
-                }
-                if (config[configName] < 0) {
-                    config[configName] = 0
-                }
-                // Save config to local storage
-                save()
-                renderConfig()
-            }
-
-            const toggleSound = () => {
-                config.playSounds = !config.playSounds
-                save()
-                renderConfig()
-            }
-
-            document.getElementById('add-end').onclick = () => incrementConfig('alertEndTime', 1)
-            document.getElementById('sub-end').onclick = () => incrementConfig('alertEndTime', -1)
-            document.getElementById('add-start').onclick = () => incrementConfig('alertStartTime', 1)
-            document.getElementById('sub-start').onclick = () => incrementConfig('alertStartTime', -1)
-            document.getElementById('toggle-sound').onclick = () => toggleSound()
-
-            const timerEl = document.getElementById('timer')
-            const containerEl = document.getElementById('body')
-            const audio = new Audio('assets/beep-warning.mp3')
-            let playingAlert = false
-            audio.onended = () => {
-                if (config.playSounds) {
-                    audio.currentTime = 0
-                    audio.play()
-                }
-            }
-            setInterval(() => {
-                const relSec = (((Date.now() - startTime) % 60000) / 1000).toFixed(1)
-                timerEl.innerHTML = relSec + 's'
-                containerEl.style.animation = null
-                containerEl.style.background = null
-                if (relSec > config.alertStartTime) {
-                    containerEl.style.animation = 'blinking 500ms infinite'
-                }
-                if (relSec > 0 && relSec < config.alertEndTime) {
-                    containerEl.style.animation = null
-                    containerEl.style.background = '#ff9100'
-                }
-                if (config.playSounds) {
-                    if (containerEl.style.animation !== '') {
-                        if (!playingAlert) {
-                            audio.play()
-                            playingAlert = true
-                        }
-                    } else {
-                        playingAlert = false
-                        audio.pause()
-                        audio.currentTime = 0
-                    }
-                }
-            }, 100)
-        };
-
-        function increment() {
-            startTime -= 1000
-        }
-
-        function decrement() {
-            startTime += 1000
-        }
-    </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MHLCVJJD5S"></script>
     <script>
@@ -156,47 +54,8 @@
 </head>
 <body class="nis body" id='body'>
 <div id='container' class='stack' style='flex-direction: column; align-items: center; gap: 10px;'>
-    <pre><h1 id="timer" class='nistext'>00:00:00</h1></pre>
     <ul class='nistext list'>
-        <li>The default settings below should be good in most cases.</li>
-        <li>Flashing <span style="color: red">red</span> means click book. Adjust the alert seconds below.</li>
-        <div class='stack' style='flex-direction: row; gap: 6px; justify-content: left;'>
-            <input readonly min="0" max="59" class="nisinput" id="alert-start"
-                   style='width: 25px; text-align: end;'/>
-            <div class='stack' style='width: 50px; flex-direction: row; '>
-                <div class="nissmallimagebutton menubutton" id="sub-start">-</div>
-                <div class="nissmallimagebutton menubutton" id="add-start">+</div>
-            </div>
-            <div class='stack' style='flex-direction: row; gap: 6px; justify-content: left;'>
-                <div>Alert sounds</div>
-                <div class="nissmallimagebutton menubutton" id="toggle-sound">
-                    <svg id="sound-on" style="display:none;width:15px;height:21px" viewBox="0 0 24 24">
-                        <path fill="currentColor"
-                              d="M14,3.23V5.29C16.89,6.15 19,8.83 19,12C19,15.17 16.89,17.84 14,18.7V20.77C18,19.86 21,16.28 21,12C21,7.72 18,4.14 14,3.23M16.5,12C16.5,10.23 15.5,8.71 14,7.97V16C15.5,15.29 16.5,13.76 16.5,12M3,9V15H7L12,20V4L7,9H3Z"/>
-                    </svg>
-                    <svg id='sound-off' style="display:unset;width:15px;height:21px" viewBox="0 0 24 24">
-                        <path fill="currentColor"
-                              d="M12,4L9.91,6.09L12,8.18M4.27,3L3,4.27L7.73,9H3V15H7L12,20V13.27L16.25,17.53C15.58,18.04 14.83,18.46 14,18.7V20.77C15.38,20.45 16.63,19.82 17.68,18.96L19.73,21L21,19.73L12,10.73M19,12C19,12.94 18.8,13.82 18.46,14.64L19.97,16.15C20.62,14.91 21,13.5 21,12C21,7.72 18,4.14 14,3.23V5.29C16.89,6.15 19,8.83 19,12M16.5,12C16.5,10.23 15.5,8.71 14,7.97V10.18L16.45,12.63C16.5,12.43 16.5,12.21 16.5,12Z"/>
-                    </svg>
-                </div>
-            </div>
-        </div>
-        <li><span style="color: orange">Orange</span> means turn off book after XP drop. Adjust the alert seconds below.</li>
-        <div class='stack' style='flex-direction: row; gap: 6px; justify-content: left;'>
-            <input readonly min="0" max="59" class="nisinput" id="alert-end" style='width: 25px; text-align: end;'/>
-            <div class='stack' style='width: 50px; flex-direction: row; '>
-                <div class="nissmallimagebutton menubutton" id="sub-end">-</div>
-                <div class="nissmallimagebutton menubutton" id="add-end">+</div>
-            </div>
-        </div>
-        <li>Press the + or - buttons to sync the seconds with the game if necessary.</li>
-        <div class='stack' style='flex-direction: row; gap: 6px; justify-content: left;'>
-            <div class='stack' style='width: 50px; flex-direction: row; '>
-                <div class="nissmallimagebutton menubutton" onclick="decrement()">-</div>
-                <div class="nissmallimagebutton menubutton" onclick="increment()">+</div>
-            </div>
-        </div>
-        <li>Shrink this window after reading the text!</li>
+        <li>A recent update has now rendered this plugin obsolete. You must now keep the book active for at least 1 minute before you are eligible for the proc. Thanks for using my plugin, it was fun while it lasted!</li>
     </ul>
 </div>
 </body>
